--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
